refactor system and add new features

--- a/resources/app-templates/content-hub/index.html
+++ b/resources/app-templates/content-hub/index.html
@@ -168,7 +168,7 @@
 					<div class="col-lg-3 col-md-4 mt-4">
 						<div class="icon-box">
 							<i class=ri-database-2-line style="color: #47aeff"></i>
-							<h3><a href="#">Data Connector Management</a></h3>
+							<h3><a href="#">Data Service Management</a></h3>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
