--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -24,11 +24,12 @@
 					<i class="fa fa-user"></i> <span id="userDisplayName"></span> <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
+					
 					<li>
-						<a href="#calljs-leoCdpRouter('My_Login_Editor')"> <i class="fa fa-user"></i> My Login Info </a> 
+						<a href="javascript:callLeoBotForIdeasRecommender('global')"> <i class="fa fa-info-circle"></i> LEO Chatbot </a> 
 					</li>
 					<li>
-						<a href="javascript:callLeoBotForIdeasRecommender('global')"> <i class="fa fa-question-circle"></i> Hi LEO </a> 
+						<a href="#calljs-leoCdpRouter('My_Login_Editor')"> <i class="fa fa-user"></i> My Login Info </a> 
 					</li>
 					<li style="display: none;" > 
 						<a href="#"> <i class="fa fa-fw fa-envelope"></i> Inbox </a> 
@@ -138,11 +139,11 @@
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
 					<li>
 						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" title="Digital Asset Management" > 
-							<i class="fa fa-fw fa-list" ></i> Asset Management </a>
+							<i class="fa fa-fw fa-list" ></i> Digital Assets </a>
 					</li>
-					<li id="Connector_Management_Menu" style="display: none;" data-system-user-roles="5,6" >
-						<a id="Connector_Management" href="#calljs-leoCdpRouter('Connector_Management')">
-							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Connector Management</a>
+					<li id="Data_Service_Management_Menu" style="display: none;" data-system-user-roles="5,6" >
+						<a id="Data_Service_Management" href="#calljs-leoCdpRouter('Data_Service_Management')">
+							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Data Services </a>
 					</li>
 					<li id="Campaign_Management_Menu" style="display: none" >
 						<a id="Campaign_Management" href="#calljs-leoCdpRouter('Campaign_Management')">
