--- a/resources/app-templates/leocdp-admin/modules/customer/business-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/business-account-editor.html
@@ -486,7 +486,7 @@
    		    fields: [
    		    	{ name: "activationType", title : "Activation Type", type: "BoldText", width: 120, align: "center" },
    		        { name: "action", title : "Action", type: "text", width: 70, align: "center" },
-   		     	{ name: "dataConnectorName", title : "Data Connector", type: "text", align: "center" },
+   		     	{ name: "dataServiceName", title : "Data Service", type: "text", align: "center" },
    		        { name: "assetTemplateName", title : "Asset Template", type: "text", align: "center" },
    		     	{ name: "priority", title : "Priority", type: "number", width: 30, align: "center" },
    		        { name: "schedulingTime", title : "Scheduling Time", type: "number", width: 64, align: "center" },
