--- a/resources/content-templates/introduction-to-leocdp.html
+++ b/resources/content-templates/introduction-to-leocdp.html
@@ -11,7 +11,7 @@
       <li>Unification to Single-view Profile: Consistent &amp; Unified 360 degree Customer View</li>
       <li>Segmentation with Visual Data Query Technology</li>
       <li>Personalization by Open Source Recommender System</li>
-      <li>Activation with open Data Enrichment Services and Data Connectors</li>
+      <li>Activation with open Data Services</li>
    </ol>
    <br />
 </div>
