--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -176,7 +176,7 @@ div.panel_header {
 	                    <hr>
 	                    <div class="radio">
 	                        <label><input type="radio" name="role" value="5" > 
-	                        	<b>DATA ADMIN</b>: the login account has full permissions to manage customer data, can manage Data Asset and Data Connector </label>
+	                        	<b>DATA ADMIN</b>: the login account has full permissions to manage customer data, can manage Data Asset and Data Service </label>
 	                    </div>
 	                    <div class="radio">
 	                        <label><input type="radio" name="role" value="6" > 
