--- a/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
@@ -122,7 +122,7 @@
 	                    </div>
 	                    <div class="radio">
 	                        <label><input type="radio" name="role" value="5" disabled="disabled"> 
-	                        	DATA ADMIN: the login account has full permissions to manage customer data, can manage Data Asset and Data Connector </label>
+	                        	DATA ADMIN: the login account has full permissions to manage customer data, can manage Data Asset and Data Service </label>
 	                    </div>
 	                    <div class="radio">
 	                        <label><input type="radio" name="role" value="6" disabled="disabled"> 
