update main menu

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -139,11 +139,11 @@
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
 					<li>
 						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" title="Digital Asset Management" > 
-							<i class="fa fa-fw fa-list" ></i> Digital Assets </a>
+							<i class="fa fa-fw fa-list" ></i> Asset Management </a>
 					</li>
 					<li id="Data_Service_Management_Menu" style="display: none;" data-system-user-roles="5,6" >
 						<a id="Data_Service_Management" href="#calljs-leoCdpRouter('Data_Service_Management')">
-							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Data Services </a>
+							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Activation Services </a>
 					</li>
 					<li id="Campaign_Management_Menu" style="display: none" >
 						<a id="Campaign_Management" href="#calljs-leoCdpRouter('Campaign_Management')">
