--- a/resources/app-templates/leocdp-admin/modules/activation/data-service-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/data-service-list.html
@@ -18,15 +18,15 @@
 		<h5 class="page-header" id="page_breadcrumb"></h5>
 	</div>
 	<div class="col-lg-2 text-right" style="padding: 10px;">
-		<button type="button" class="btn btn-goto-router data-control-insert" onclick="newDataService()" title="Install New Data Service" >
-			<i class="fa fa-plus-circle" aria-hidden="true"></i> New Data Service
+		<button type="button" class="btn btn-goto-router data-control-insert" onclick="newDataService()" title="Install New Activation Data Service" >
+			<i class="fa fa-plus-circle" aria-hidden="true"></i> New Activation Service
 		</button>
 	</div>
 </div>
 
 <div class="top_page_header" >
 	<h4> 
-		<i class="fa fa-exchange " aria-hidden="true"></i> Data Service Management 
+		<i class="fa fa-exchange " aria-hidden="true"></i> Activation Service Management 
 		<i id="data_services_tooltip" class="fa fa-question-circle" aria-hidden="true" title="Please set configuration to activate data_services" ></i>
 	</h4>
 </div>
@@ -34,19 +34,19 @@
 <div class="col-lg-12 row">
 	<div class="panel panel-info" >
 	   	<div class="panel-heading">
-	   		<b> <i class="fa fa-search" aria-hidden="true"></i> Service Filter </b>
+	   		<b> <i class="fa fa-search" aria-hidden="true"></i> Activation Service Filter </b>
 	   	</div>
 	    <div class="panel-body">
 	      	<div class="col-lg-12 row">
 	      		<div class="col-lg-8" >
 					<input id="filter_data_services_keywords" type="text" placeholder="Enter keywords to search data services" autocomplete="off">				
-					<label for="select_filter_data_services" style="margin-top:10px;" >Service Status</label>
+					<label for="select_filter_data_services" style="margin-top:10px;" >Status</label>
 					<select class="form-control" id="select_filter_data_services" >
-				    	<option value="all"> All data services</option>
-				    	<option value="active"> Active data services </option>
-				    	<option value="active_for_personalization" title="filter only active data services for data personalization" > Active data services for data personalization</option>
-				    	<option value="active_for_enrichment" title="filter only active data services for data enrichment"> Active data services for data enrichment</option>
-				    	<option value="active_for_synchronization" title="filter only active data services for data synchronization"> Active data services for data synchronization</option>
+				    	<option value="all"> All activation services</option>
+				    	<option value="active"> Active activation services </option>
+				    	<option value="active_for_personalization" title="filter only active data services for data personalization" > Active activation services for data personalization</option>
+				    	<option value="active_for_enrichment" title="filter only active data services for data enrichment"> Active activation services for data enrichment</option>
+				    	<option value="active_for_synchronization" title="filter only active data services for data synchronization"> Active activation services for data synchronization</option>
 				    </select>
 				</div>
 				<div class="col-lg-4">
