--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -25,14 +25,15 @@
 				</a>
 				<ul class="dropdown-menu">
 					
-					<li>
-						<a href="javascript:callLeoBotForIdeasRecommender('global')"> <i class="fa fa-info-circle"></i> LEO Chatbot </a> 
+					<li style="display: none;" > 
+						<a href="#"> <i class="fa fa-fw fa-envelope"></i> Inbox </a> 
 					</li>
 					<li>
 						<a href="#calljs-leoCdpRouter('My_Login_Editor')"> <i class="fa fa-user"></i> My Login Info </a> 
 					</li>
-					<li style="display: none;" > 
-						<a href="#"> <i class="fa fa-fw fa-envelope"></i> Inbox </a> 
+					<li class="divider"></li>
+					<li>
+						<a href="javascript: initLeoChatBot('global')"> <i class="fa fa-question-circle"></i> LEO Chatbot </a> 
 					</li>
 					
 					<li class="divider"></li>
