refactoring JS and improve leo chatbot

--- a/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
@@ -13,8 +13,9 @@
 div.leobot-answer .botui-message-content {
     color: #000 !important;
 }
-div[class='botui-message-content loading'] {
-	position: relative !important; width: 96px !important;
+#LEO_ChatBot_Container div[class='botui-message-content loading'] {
+	position: relative !important; width: 99px !important;
+	background-image:none !important;
 }
 </style>
 
