improve UI UX of leo chatbot

--- a/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
@@ -13,6 +13,9 @@
 div.leobot-answer .botui-message-content {
     color: #000 !important;
 }
+div.leobot-info .botui-message-content {
+    color: #CB4335 !important;
+}
 #LEO_ChatBot_Container div[class='botui-message-content loading'] {
 	position: relative !important; width: 99px !important;
 	background-image:none !important;
@@ -53,6 +56,24 @@ div.leobot-answer .botui-message-content {
         </div>
     </div>
 </div>
+
+<script id="tpl_leocdp_documents" type="text/x-handlebars-template">
+<i class="fa fa-info-circle" aria-hidden="true"></i> Some documents that you can learn more about LEO CDP <br>
+<ul >
+<li>
+	<a href="https://knowledge.leocdp.net/p/what-is-uspa-framework.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to USPA framework</a>
+</li>
+<li>
+	<a href="https://knowledge.leocdp.net/p/introduction-to-leo-cdp-101.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to LEO CDP </a>
+</li>
+<li>
+	<a href="https://knowledge.leocdp.net/p/how-to-do-customer-analytics.html"> <i class="fa fa-book" aria-hidden="true"></i> How to do Customer Analytics </a>
+</li>
+<li>
+	<a href="https://knowledge.leocdp.net/p/how-to-design-customer-journey.html"> <i class="fa fa-book" aria-hidden="true"></i> How to design customer journey</a>
+</li>
+</ul>
+</script>
 
 <script id="suggestedVideoTpl" type="text/x-handlebars-template">
     <div>    
